<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/checkincom"
        android:title="@string/str_checkincom"
        />
    <item
        android:id="@+id/buycom"
        android:title="@string/str_buycom"
        />
    <!--<item
        android:visibility="gone"
        android:id="@+id/bindingcom"
        android:title="@string/str_bindingcom"
        />-->
    <!--<item
        android:visibility="gone"
        android:id="@+id/getinfocom"
        android:title="@string/str_getinfocom"
        />-->
    <item
        android:id="@+id/buy2com"
        android:title="@string/str_buy2com"
        />
    <!--<item
        android:visibility="gone"
        android:id="@+id/fightcom"
        android:title="@string/str_fightcom"
        />-->
    <!--<item
        android:id="@+id/getpetinfocom"
        android:title="@string/str_getpetinfocom"
        />-->
    <!--<item
        android:id="@+id/lincom"
        android:title="@string/str_lincom"
        />-->
    <item
        android:id="@+id/jucom"
        android:title="@string/str_jucom"
        />
    <!--<item
        android:visibility="gone"
        android:id="@+id/ss"
        android:title="@string/str_ss"
        />-->
    <!--<item
        android:visibility="gone"
        android:id="@+id/fightcomss"
        android:title="@string/str_fightcomss"
        />-->
    <item
        android:id="@+id/qiangcom"
        android:title="@string/str_qiangcom"
        />
    <!--<item
        android:id="@+id/petcom"
        android:title="@string/str_petcom"
        />-->
    <!--<item
        android:visibility="gone"
        android:id="@+id/shtqcom"
        android:title="@string/shtqcom"
        />-->
    <!--<item
        android:visibility="gone"
        android:id="@+id/ystqcom"
        android:title="@string/ystqcom"
        />-->
    <!--<item
        android:id="@+id/qdgrcom"
        android:title="@string/str_qdgrcom"
        />
    <item
        android:id="@+id/qdgxcom"
        android:title="@string/str_qdgxcom"
        />
    <item
        android:id="@+id/dicecom"
        android:title="@string/str_dicecom"
        />-->
    <!--<item
        android:visibility="gone"
        android:id="@+id/buildcom"
        android:title="@string/str_buildcom"
        />-->
    <!--<item
        android:id="@+id/qdbegin"
        android:title="@string/str_qdbegin"
        />-->
</menu>